--- a/mypage/static/css/mypage.css
+++ b/mypage/static/css/mypage.css
@@ -1,26 +1,266 @@
 .mypage_navbar2{
     list-style-type:none; 
-    text-align: left; 
-    font-weight: bold;
+
 }
-.personal_information_correction{/*전체 블럭*/
-    width: 600px; 
-    height: 1000px; 
-    margin: 0 auto; ;
+.nav-corr{color: inherit;}
+.nav-wishlist{color: inherit;}
+.nav-my_posts{color: inherit;}
+
+.nav-corr:hover{color: #FD6F22;}
+.nav-wishlist:hover{color: #FD6F22;}
+.nav-my_posts:hover{color: #FD6F22;}
+
+.nav-corr{text-decoration: none;font-size:1em;}
+.nav-wishlist{text-decoration: none;font-size:1em;}
+.nav-my_posts{text-decoration: none;font-size:1em;}
+.mypage_navbar2{
+    margin-top: 5%;
 }
+/* nav.mypage_navbar2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 15vw
+  }
+  .mypage_navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  } */
+/*전체 블럭*/
+.personal_information_correction{
+    display:block;
+}
+
+.mypage-profile-image{
+    width: 30vh;
+}
+/*bt-change*/
+.bt-change{
+    color: inherit;
+}
+a:visited{
+    color:black;
+    
+}
+a:hover{
+    color:#FD6F22;
+} 
+.withdrawal-box{
+    color: #F8F8F8;
+}
+
 .correction_all{ /*개인정보 table*/
     background-color: #F8F8F8; 
     border-radius: 30px;
-    width: 100%;
+    margin: 5px auto; /*auto로 하면 가운데로 옴*/
+    width: 75vh;
+    height: 50vh;
 }
 .td1{
     color: #FD6F22;
     font-weight: bold;
-    
 }
-.modify2{
+.changechange-form{
+    background-color: #F8F8F8; 
+    border-radius: 30px;
+    margin: 5px auto; /*auto로 하면 가운데로 옴*/
+    width: 75vh;
+    height: 50vh;
+    border: 1px solid black;
+}
+/*mypage에서 개인정보수정, 비밀번호변경, 회원탈퇴 버튼*/
+.bt-change{
     float: left;
+    width:30%;
+    box-sizing: border-box;
 }
-.modify3{
-    float: right;
+.bt-password-change{
+    float: left;
+    width:30%;
+    box-sizing: border-box;
+}
+.bt-membership-withdrawal{
+    float: left;
+    width:30%;
+    box-sizing: border-box;
+}
+
+/*mypage_update*/
+.form-change{
+    margin: 0 auto;
+    background-color: #F8F8F8;
+}
+
+/* .my-page-change-form{
+    margin: 0 auto;
+} */
+.my-page-change-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .my-page-change-form table {
+    margin-bottom: 1em;
+  }
+  .my-page-change-form table td {
+    padding: 5px;
+  }
+  .my-page-change-form a,
+  .my-page-change-form button {
+    margin: 5px;
+  }
+
+/*비밀번호변경폼*/
+.password-change-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .mypage-password-form{
+    border: 1px solid black;
+    background-color: #F8F8F8; 
+    border-radius: 30px;
+    margin: 5px auto; /*auto로 하면 가운데로 옴*/
+    width: 75vh;
+    height: 50vh;
+  }
+  .password-form-group {
+    margin-bottom: 1em;
+  }
+  .password-change-container button {
+    margin-top: 1em;
+  }
+  .my-page-change-form .button-container {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+  }
+  /*myposts, wishlists*/
+
+/* Custom Wishlist CSS */
+.wishlist-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 920px;
+  margin: 0 auto; 
+}
+
+.wishlist-item {
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 3px 3px 2px rgb(185, 185, 185);
+  margin: 15px;
+  width: 45%; 
+  height: 220px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.wishlist-title {
+  font-size: 30px;
+  color: #FD6F22;
+  font-weight: bold;
+  padding-top: 10px;
+}
+
+.wishlist-item ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.wishlist-item li {
+  flex-grow: 1;
+}
+
+.item-contents {
+  display: flex;
+}
+
+.item-image {
+  width: 110px;
+  height: 110px;
+  background-color: #b9b9b9;
+  border-radius: 15px;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.item-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+}
+
+.item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 5px;
+}
+
+.item-info span {
+  font-size: 18px;
+}
+
+.item-title {
+  font-weight: bold;
+  width: 100%;
+  margin-top: 10px;
+  text-align: center;
+}
+.item-remove {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+/*myposts*/
+ul.mypost-ul {
+  list-style-type: none;
+  padding: 0;
+  width: 70%;
+  margin: 0 auto;
+}
+ul.mypost-ul li {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc;
+}
+ul.mypost-ul li .post-photo {
+  flex: 0 0 100px;
+}
+ul.mypost-ul li .post-photo img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-left: 15px;
+}
+ul.mypost-ul li .post-content {
+  flex: 1;
+  text-align: center;
+}
+ul.mypost-ul li .post-modify-btn{
+  flex: 0 0 50px;
+  text-align: center;
+}
+.post-modify-btn a {
+  display:inline-block;
+  width:100%;
+  height:100%;
+  border: 1px solid #000;
+  text-align: center;
+  line-height: 20px;
+  text-decoration:none;
+  margin-left: 10px;
 }
