--- a/mypage/templates/wishlist_t.html
+++ b/mypage/templates/wishlist_t.html
@@ -13,7 +13,7 @@
     }
   </style>
 </head>
-
+<!--nav22-->
 <div class="mypage_navbar">
   <nav class="mypage_navbar2">
     <span style="margin: 10px;"><a class="nav-corr" href="{% url 'mypage' %}">회원정보</a> </span>
@@ -21,17 +21,16 @@
     <span style="margin: 10px;"><a class="nav-my_posts" href="{% url 'my_posts_t' %}">내가 쓴 글</a> </span>
   </nav>
 </div>
-<hr style="width: 45%; margin: 0px auto;">
 <br>
 <div>
   <nav>
-    <small><a href="{% url 'wishlist_t' %}"style="color: #FD6F22;font-weight: bold; text-decoration: none;">선생님 글</a></small>
-    <small><a href="{% url 'wishlist_s' %}"style="color: #FD6F22;font-weight: bold; text-decoration: none;">배우미 글</a></small>
-    <small><a href="{% url 'wishlist_o' %}"style="color: #FD6F22;font-weight: bold; text-decoration: none;">체험학습 글</a></small>
+    <small><a class="nav-nav-nav" href="{% url 'wishlist_t' %}"style="font-weight: bold; text-decoration: none;"> 선생님 </a></small>
+    <small><a class="nav-nav-nav" href="{% url 'wishlist_s' %}"style="font-weight: bold; text-decoration: none;"> 배우미 </a></small>
+    <small><a class="nav-nav-nav" href="{% url 'wishlist_o' %}"style="font-weight: bold; text-decoration: none;"> 체험학습 </a></small>
   </nav>
 </div>
-<hr>
-
+<hr style="width: 45%; margin: 1% auto;">
+<!--nav22-->
 <h2 class="wishlist-title">{{ user.nickname }}님의 관심목록</h2>
 <div class="wishlist-container">
   {% for item in wishlists %}
@@ -50,7 +49,7 @@
         </div>
       </li>
       <li class="item-title">
-        <h3><a href="{% url 't_r' item.t_post.id %}" style="font-weight: bold;color: #FD6F22;text-decoration: none;">{{ item.t_post.title }}</a></h3>
+        <h5><a href="{% url 't_r' item.t_post.id %}" style="font-weight: bold;color: #FD6F22;text-decoration: none;">{{ item.t_post.title }}</a></h5>
       </li>
       <!-- 삭제 버튼 위치 변경 -->
       <div class="item-remove">
