--- a/student/templates/s_c.html
+++ b/student/templates/s_c.html
@@ -31,14 +31,14 @@
 
 
         <div class="field">
-          <span style="color:#FD6F22; font-weight: bold;">모집 분야</span>
+          <span style="color:#FD6F22; font-weight: bold;">배움 분야</span>
           {{ form.field }}
         </div>
 
         <div class="number">
-          <span style="color:#FD6F22; font-weight: bold;">모집 인원</span>
+          <span style="color:#FD6F22; font-weight: bold;">배움 인원</span>
           {{ form.number }}
-          <span> 명을 모집해요</span>
+          <span> 명이 배워요</span>
         </div>
 
         <div class="period">
@@ -49,19 +49,19 @@
           </div>
           <div class="period2">
             {{ form.period2 }}
-            <span>까지 모집해요</span>
+            <span>까지 모집을 원해요</span>
           </div>
         </div>
 
         <div class="region">
           <span style="color:#FD6F22; font-weight: bold;">진행 지역</span>
           {{ form.region }}
-          <span>에서 진행해요</span>
+          <span>에서 진행하길 원해요</span>
           
         </div>
 
         <div class="content">
-          <span style="color:#FD6F22; font-weight: bold;">모집 내용</span>
+          <span style="color:#FD6F22; font-weight: bold;">배움 내용</span>
           <p><br></p>
           {{ form.content }}
         </div>
