--- a/teacher/static/css/t_c.css
+++ b/teacher/static/css/t_c.css
@@ -244,7 +244,7 @@ body {
     margin-left: 10px;
     margin-right: 10px;
   }
-  
+
 
   .content .summernote {
     width: 30vw;
@@ -312,6 +312,21 @@ body {
   }
 
   /* 내가 추가함 */
+  .title,
+  .field,
+  .number,
+  .period,
+  .region,
+  .photo {
+    font-size: 12px;
+  }
+
+  .content {
+    font-size: 12px;
+    display: flex;
+    flex-direction:column;
+  }
+
   .create-form {
     padding: 5%;
   }
@@ -379,7 +394,3 @@ body {
   padding-top: 50px;
   padding-bottom: 50px !important;
 }
-
-
-
-
