--- a/teacher/templates/t_main.html
+++ b/teacher/templates/t_main.html
@@ -20,8 +20,20 @@
 <div class="teacher">
 
   <div class="teacher-container mx-auto">
+    <div class="tp-tt ">
+      <span class="tp-title">모연 선생님</span>
+      
+      <div class="search-container">
+        <form method="GET" action=".">
+          <input type="text" id="search-input" class="search-input" name="q" placeholder="상세검색" style="border: 2px solid rgb(155, 155, 155);">
+          <input type="submit" id="search-button" class="search-button" value="검색" style="border: 2px solid rgb(155, 155, 155);">
+        </form>
+      </div>
+    </div>
 
-    <span class="tp-title">모연 선생님</span>
+
+
+
     <div class="teacher-top">
       <div class="teacher-path">
         <div class="teacher-path-icon">
@@ -31,6 +43,9 @@
           <span>메인 > 모연 선생님</span>
         </div>
       </div>
+
+
+
       <div class="teacher-create">
         <a class="teacher-create-link" href="{% url 't_c' %}">글쓰기</a>
       </div>
