최종폴리퀘shinhee

--- a/mypage/static/css/mypage.css
+++ b/mypage/static/css/mypage.css
@@ -215,6 +215,13 @@ a:hover{
 .wishlist-item li {
   flex-grow: 1;
 }
+.post-content-som{
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 10px auto;
+}
+
 
 .item-contents {
   display: flex;
