--- a/mypage/templates/my_posts_s.html
+++ b/mypage/templates/my_posts_s.html
@@ -6,6 +6,7 @@
 {% endblock css %}
 
 {% block content %}
+
 <head>
   <style>
     body {
@@ -25,38 +26,43 @@
 <br>
 <div>
   <nav>
-    <small><a class="nav-nav-nav" href="{% url 'my_posts_t' %}"style="font-weight: bold; text-decoration: none;"> 선생님 </a></small>
-    <small><a class="nav-nav-nav" href="{% url 'my_posts_s' %}"style="font-weight: bold; text-decoration: none;"> 배우미 </a></small>
-    <small><a class="nav-nav-nav" href="{% url 'my_posts_o' %}"style="font-weight: bold; text-decoration: none;"> 체험학습 </a></small>
+    <small><a class="nav-nav-nav" href="{% url 'my_posts_t' %}" style="font-weight: bold; text-decoration: none;"> 선생님
+      </a></small>
+    <small><a class="nav-nav-nav" href="{% url 'my_posts_s' %}" style="font-weight: bold; text-decoration: none;"> 배우미
+      </a></small>
+    <small><a class="nav-nav-nav" href="{% url 'my_posts_o' %}" style="font-weight: bold; text-decoration: none;"> 체험학습
+      </a></small>
   </nav>
 </div>
 <hr style="width: 45%; margin: 1% auto;">
 <!--nav22-->
 <h2 class="wishlist-title">{{ user.nickname }}님의 [배우미]작성글</h2>
-  <ul class="mypost-ul">
-      {% for post in posts_student %}
-          <li class="mypost-li">
-              <div class="post-photo">
-                  {% if post.photo %}
-                  <img src="{{ post.photo.url }}" alt="image" width="200" height="200">
-                  {% else %}
-                  <div class="item-image"></div>
-                  {% endif %}
-              </div>
-              <div class="post-content">
-                <div><a href="{% url 's_r' post.id %}">{{ post.title }}</a></div>
-                  <div>지역: {{ post.region }}</div>
-                  <div>모집인원: {{ post.number }}</div>
-                  <div><small>{{ post.period1 }} ~ {{ post.period2 }}</small></div>
-              </div>
-              <div class="post-modify-btn">
-                  <a href="{% url 's_u' post.id %}">수정</a>
-              </div>
-          </li>
-          <br>
-          {% empty %}
-          <p>작성글이 아직 없습니다.</p>
-      {% endfor %}
-  </ul>
+<ul class="mypost-ul">
+  {% for post in posts_student %}
+  <li class="mypost-li">
+    <div class="post-photo">
+      {% if post.photo %}
+      <img src="{{ post.photo.url }}" alt="image" width="200" height="200">
+      {% else %}
+      <div class="item-image"></div>
+      {% endif %}
+    </div>
+    <div class="post-content">
+      <div><a href="{% url 's_r' post.id %}">{{ post.title }}</a></div>
+      <div class="post-content-som">
+        <div><img src="{% static 'image/mapIcon.png' %}" style="width: 20px;"> {{ post.region }}</div>
+        <div><img src="{% static 'image/followicon.png' %}" style="width: 20px;"> {{ post.number }}</div>  
+      </div>
+      <div><small>{{ post.period1 }} ~ {{ post.period2 }}</small></div>
+    </div>
+    <div class="post-modify-btn">
+      <a href="{% url 's_u' post.id %}">수정</a>
+    </div>
+  </li>
+  <br>
+  {% empty %}
+  <p>작성글이 아직 없습니다.</p>
+  {% endfor %}
+</ul>
 </div>
 {% endblock %}
